--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "type": "module",
   "main": "server.mjs",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
+    "start": "node server.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
